Fix logic for MainActivity intents.

--- a/ActivityNavigation/app/src/main/res/layout/activity_second.xml
+++ b/ActivityNavigation/app/src/main/res/layout/activity_second.xml
@@ -24,6 +24,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
+            android:text="Email"
             android:textSize="18sp" />
 
     <TextView
@@ -31,6 +32,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
+            android:text="Password"
             android:textSize="18sp" />
 
     <Button
