--- a/IncidentReporter/app/src/main/res/menu/fragment_incident_list.xml
+++ b/IncidentReporter/app/src/main/res/menu/fragment_incident_list.xml
@@ -3,7 +3,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
             android:id="@+id/menu_new_incident"
-            android:icon="@android:drawable/ic_menu_add"
+            android:icon="@drawable/ic_baseline_add_24"
             android:title="@string/new_incident"
             app:showAsAction="ifRoom|withText" />
 </menu>
